--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,14 +6,14 @@
 @import "../../../node_modules/bootstrap/scss/utilities";
 
 $light-theme: (
-  "primary": #4fa6a4,
-  "secondary": #071e3b,
+  "primary": #5f0f40,
+  "secondary": #0f4c5c,
   "success": #0cbc87,
   "info": #17a2b8,
-  "warning": #f7c32e,
-  "danger": #d6293e,
+  "warning": #fb8b24,
+  "danger": #9a031e,
   "text": #f8f9fd,
-  "page": #f4f4f4
+  "page": #fef6f0
 );
 
 $dark-theme: (
@@ -53,83 +53,98 @@ $default-colors: (
 
     --#{$variable-prefix}#{$color}: #{$value};
     --#{$variable-prefix}#{$color}-text-emphasis: #{if(
-        $theme == "light",
-        shade-color($value, $shade-amount),
-        tint-color($value, $shade-amount)
-      )};
-    --#{$variable-prefix}#{$color}-bg-subtle: #{if(
-        $theme == "light",
-        lighten($value, $color-variation),
-        darken($value, $color-variation)
-      )};
-    --#{$variable-prefix}#{$color}-border-subtle: #{if(
-        $theme == "light",
-        lighten($value, calc($color-variation / 2)),
-        darken($value, calc($color-variation / 2))
-      )};
-      .text-#{$color} {
-        --bs-color: #{$value};
-      }
-      .border-#{$color}{
-        --bs-border-color: #{$value};
-      }
-      .outline{
-        outline-style: var(--bs-outline-style, solid);
-        outline-width: var(--bs-outline-width, 1px);
-        outline-color: var(--bs-outline-color, var(--bs-primary));
-      }
-      .outline-#{$color}{
-        --bs-outline-color: #{$value};
-      }
-    }
-    
-    // Redefine theme color rgb vars (used for bg- colors)
-    $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
-    @each $color, $value in $theme-colors-rgb {
-      --#{$variable-prefix}#{$color}-rgb: #{$value};
-    .bg-#{$color} {
-      background-color: rgba($value, var(--bs-bg-opacity));
-    }
-    .focus-ring-#{$color}{
-      --bs-focus-ring-color: rgba(#{$value} , .25);
-    }
+ $theme =="light",
+    shade-color($value, $shade-amount),
+    tint-color($value, $shade-amount))
   }
 
-  @each $color, $value in $theme-colors {
-    .btn-#{$color} {
-      @if $theme == "light" {
-        @include button-variant(
-          $value,
-          $value,
-          $hover-background: shade-color($value, $btn-hover-bg-shade-amount),
-          $hover-border: shade-color($value, $btn-hover-border-shade-amount),
-          $active-background: shade-color($value, $btn-active-bg-shade-amount),
-          $active-border: shade-color($value, $btn-active-border-shade-amount),
-          $disabled-background: transparentize($value, .25),
-          $disabled-border: transparentize($value, .25),
-        );
-      } @else if $theme == "dark" {
-        @include button-variant(
-          $value,
-          $value,
-          $hover-background: tint-color($value, $btn-hover-bg-tint-amount),
-          $hover-border: tint-color($value, $btn-hover-border-tint-amount),
-          $active-background: tint-color($value, $btn-active-bg-tint-amount),
-          $active-border: tint-color($value, $btn-active-border-tint-amount),
-          $disabled-background: transparentize($value, .25),
-          $disabled-border: transparentize($value, .25),
-        );
-      } @else {
-        @include button-variant($value, $value);
-      }
-    }
+  ;
+  --#{$variable-prefix}#{$color}-bg-subtle: #{if(
+ $theme =="light",
+  lighten($value, $color-variation),
+  darken($value, $color-variation))
+}
+
+;
+--#{$variable-prefix}#{$color}-border-subtle: #{if(
+ $theme =="light",
+lighten($value, calc($color-variation / 2)),
+darken($value, calc($color-variation / 2)))
+}
+
+;
+
+.text-#{$color} {
+  --bs-color: #{$value};
+}
+
+.border-#{$color} {
+  --bs-border-color: #{$value};
+}
+
+.outline {
+  outline-style: var(--bs-outline-style, solid);
+  outline-width: var(--bs-outline-width, 1px);
+  outline-color: var(--bs-outline-color, var(--bs-primary));
+}
+
+.outline-#{$color} {
+  --bs-outline-color: #{$value};
+}
+}
+
+// Redefine theme color rgb vars (used for bg- colors)
+$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
+
+@each $color, $value in $theme-colors-rgb {
+  --#{$variable-prefix}#{$color}-rgb: #{$value};
+
+  .bg-#{$color} {
+    background-color: rgba($value, var(--bs-bg-opacity));
   }
 
-  @each $color, $value in $theme-colors {
-    .btn-outline-#{$color} {
-      @include button-outline-variant($value);
+  .focus-ring-#{$color} {
+    --bs-focus-ring-color: rgba(#{$value}, .25);
+  }
+}
+
+@each $color, $value in $theme-colors {
+  .btn-#{$color} {
+    @if $theme =="light" {
+      @include button-variant($value,
+        $value,
+        $hover-background: shade-color($value, $btn-hover-bg-shade-amount),
+        $hover-border: shade-color($value, $btn-hover-border-shade-amount),
+        $active-background: shade-color($value, $btn-active-bg-shade-amount),
+        $active-border: shade-color($value, $btn-active-border-shade-amount),
+        $disabled-background: transparentize($value, .25),
+        $disabled-border: transparentize($value, .25),
+      );
+    }
+
+    @else if $theme =="dark" {
+      @include button-variant($value,
+        $value,
+        $hover-background: tint-color($value, $btn-hover-bg-tint-amount),
+        $hover-border: tint-color($value, $btn-hover-border-tint-amount),
+        $active-background: tint-color($value, $btn-active-bg-tint-amount),
+        $active-border: tint-color($value, $btn-active-border-tint-amount),
+        $disabled-background: transparentize($value, .25),
+        $disabled-border: transparentize($value, .25),
+      );
+    }
+
+    @else {
+      @include button-variant($value, $value);
     }
   }
+}
+
+@each $color, $value in $theme-colors {
+  .btn-outline-#{$color} {
+    @include button-outline-variant($value);
+  }
+}
 }
 
 [data-bs-theme="light"] {
